# Advanced_C_Programming_course

./: .gitignore  CMakeLists.txt  README.md  main.c  other.h  other.h.gch
Sec 04 -- Working With Larger Programs/Heap_and_Stack_Memory_Allocation/: heapExample.c  main.c
Sec 04 -- Working With Larger Programs/StaticFiles/: main.c  variables.c
Sec 04 -- Working With Larger Programs/Testing/: main
Sec 05 -- Storage Classes/AutoVariable/: CMakeLists.txt
Sec 05 -- Storage Classes/Register/: CMakeLists.txt
Sec 05 -- Storage Classes/Static/: main.c
Sec 06 -- Advanced Data Types/Challenge_Flexible_array_member/: CMakeLists.txt
Sec 06 -- Advanced Data Types/Challenge_Variable_Length_Arrays/: CMakeLists.txt  main.c
Sec 06 -- Advanced Data Types/Complex_numbers/: main.c
Sec 06 -- Advanced Data Types/Define_Statements/: CMakeLists.txt
Sec 06 -- Advanced Data Types/Typedef/: CMakeLists.txt
Sec 06 -- Advanced Data Types/Variable_Length_Array/: CMakeLists.txt  main.c
Sec 06 -- Advanced Data Types/Volatile/: main.c
Sec 06 -- Advanced Data Types/restrict/: CMakeLists.txt  main.c
Sec 07 -- Type Qualifiers/Const/: main.c
Sec 08 -- Bit Manipulation/Bit_Operators_to_Pack_Data/: CMakeLists.txt  main.c
Sec 08 -- Bit Manipulation/Bitmasks/: CMakeLists.txt  main.c
Sec 08 -- Bit Manipulation/Challenge_Binary_Numbers_and_Bits/: CMakeLists.txt  main.c
Sec 08 -- Bit Manipulation/Challenge_Bitwise_operators/: CMakeLists.txt  main.c
Sec 08 -- Bit Manipulation/Challenge_Setting_and_Reading_bits/: CMakeLists.txt
Sec 08 -- Bit Manipulation/Challenge_Using_Bitfields_to_Pack_Data/: CMakeLists.txt
Sec 09 -- Advance Control Flow/Challenge_The_Goto_Statement/: main.c
Sec 09 -- Advance Control Flow/Challenge_setjmp_longjmp/: CMakeLists.txt  main.c
Sec 09 -- Advance Control Flow/Goto_Statement/: CMakeLists.txt
Sec 09 -- Advance Control Flow/comma_operator/: CMakeLists.txt  main.c
Sec 10 -- Input and Output/Challenge_Char_Functions/: CMakeLists.txt  main.c
Sec 10 -- Input and Output/Challenge_Char_Functions_2/: CMakeLists.txt  main.c
Sec 10 -- Input and Output/Challenge_Formatting_Functions/: CMakeLists.txt  main.c
Sec 10 -- Input and Output/Challenge_String_IO_Functions/: CMakeLists.txt  main.c
Sec 10 -- Input and Output/Char_output_functions/: CMakeLists.txt  main.c  test.txt
Sec 10 -- Input and Output/Formatting_Functions/: CMakeLists.txt  main.c  test.txt
Sec 10 -- Input and Output/String_IO_Functions/: CMakeLists.txt  main.c
Sec 10 -- Input and Output/char_functions/: CMakeLists.txt  cats.txt  main.c
Sec 11 -- Advanced Function Concepts/Challenge_Recursion/: CMakeLists.txt  main.c
Sec 11 -- Advanced Function Concepts/Challenge_Variadic_Functions/: CMakeLists.txt  main.c
Sec 11 -- Advanced Function Concepts/Inline_Declarations/: CMakeLists.txt  main.c
Sec 11 -- Advanced Function Concepts/Recursion/: CMakeLists.txt  main.c
Sec 11 -- Advanced Function Concepts/Variadic_Functions/: CMakeLists.txt  main.c
Sec 11 -- Advanced Function Concepts/_Noreturn/: CMakeLists.txt  main.c
Sec 11 -- Advanced Function Concepts/va_copy/: CMakeLists.txt  main.c
Sec 12 -- Unions/Challenge_Unions/: CMakeLists.txt  main.c
Sec 12 -- Unions/Overview/: main.c
Sec 13 -- Preprocessor/Conditional_Compilation/: CMakeLists.txt  main.c
Sec 13 -- Preprocessor/pragma_and_error/: CMakeLists.txt  main.c
Sec 14 -- Macros/Challenge_Macros/: CMakeLists.txt  a.out  main.c  main.s
Sec 14 -- Macros/Creating_Macros/: CMakeLists.txt  main.c
Sec 14 -- Macros/Macros_VS_Functions/: CMakeLists.txt  main.c
Sec 14 -- Macros/Overview/: main.c
Sec 14 -- Macros/Predefined_Macros/: CMakeLists.txt  main.c
Sec 14 -- Macros/Preprocessor_Operations/: CMakeLists.txt  main.c
Sec 15 -- Advanced Debugging Analysis & Compiler Options/Challenge/: main  main.c  main.gmon
Sec 15 -- Advanced Debugging Analysis & Compiler Options/Core_files/: CMakeLists.txt  main.c
Sec 15 -- Advanced Debugging Analysis & Compiler Options/Debugging_With_Preprocessor/: CMakeLists.txt  a.out  main.c
Sec 15 -- Advanced Debugging Analysis & Compiler Options/GBD_Debugging_2/: CMakeLists.txt  main.c
Sec 15 -- Advanced Debugging Analysis & Compiler Options/GCC_Compiler_Options_1/: CMakeLists.txt  a.out  main.c  main.s
Sec 15 -- Advanced Debugging Analysis & Compiler Options/GCC_Compiler_Options_2/: CMakeLists.txt  a.out  main.c
Sec 15 -- Advanced Debugging Analysis & Compiler Options/GDB_Debugging_1/: CMakeLists.txt  main.c
Sec 15 -- Advanced Debugging Analysis & Compiler Options/test/: a.out  (+5 more)
Sec 16 -- Advanced Pointers/Challenge_Function_Pointers/: CMakeLists.txt  main.c
Sec 17 -- Static Libraries and Shared Objects/Challenge_Dynamic_Library/: CMakeLists.txt  StringFunctions.c  StringFunctions.h  main.c  mainDL2
Sec 17 -- Static Libraries and Shared Objects/Challenge_Dynamic_Library/testdir/: mainDL
Sec 17 -- Static Libraries and Shared Objects/Creating_Dynamic_Library/: CMakeLists.txt  main.c
Sec 17 -- Static Libraries and Shared Objects/Creating_a_Static_Library/: CMakeLists.txt  main.c
Sec 19 -- Data Structures/For_Fun_Double_Linked_List/: CMakeLists.txt  main.c
Sec 20 -- Interprocess Communication/Intro_to_Interprocess_Communication/: CMakeLists.txt  main.c
Sec 21 -- Threads/Challenge_1/: CMakeLists.txt  main.c
Sec 21 -- Threads/Challenge_2/: CMakeLists.txt  main.c
Sec 21 -- Threads/Challenge_3/: CMakeLists.txt  main.c
Sec 21 -- Threads/Common_Thread_Functions/: CMakeLists.txt  main.c
Sec 21 -- Threads/Conditional_Variables/: CMakeLists.txt  main.c
Sec 21 -- Threads/Creating_Threads/: CMakeLists.txt  main.c
Sec 21 -- Threads/Deadlock_example/: CMakeLists.txt  main.c
Sec 21 -- Threads/Mutex_Practice/: CMakeLists.txt  main.c
Sec 21 -- Threads/Mutex_Practice_2/: CMakeLists.txt  main.c
Sec 21 -- Threads/Passing_Arguments_and_Returning_Values/: CMakeLists.txt  main.c
Sec 21 -- Threads/Passing_Multiple_args/: CMakeLists.txt  main.c
Sec 21 -- Threads/Thread_Synchronization_Concepts/: CMakeLists.txt  main.c
Sec 21 -- Threads/pthread_cancle/: CMakeLists.txt  main.c
(+134 files in other folders)
